chore: update about page with new job details and personal interests

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -3,15 +3,27 @@ title: About
 description: Here's information about me
 ---
 
-Tsang Ka-Lung(in Cantonese, Zeng Jia-long in Mandarin) is a software engineer at ByteDance, specializing in Payment Marketing for [Douyin Pay](https://www.douyinpay.com/).
+Tsang Ka-Lung(in Cantonese, Zeng Jia-long in Mandarin) is a software engineer at Zoom who works on [Zoom Docs](https://www.zoom.com/en/products/collaborative-docs-new/).
 
-From 2023 to 2024, he contributed to the mobile pages of [Tiktok Shop](https://shop.tiktok.com/business/en).
+From 2022 to August 2025, he spent three years at ByteDance:
 
-Before that, he was instrumental in developing ByteDance's hybrid framework for mobile platforms. Earlier in his career, he focused on the runtime and build systems for mini programs at Ant Group.
+- Contributed to the mobile pages of [Tiktok Shop](https://shop.tiktok.com/business/en) and [Douyin Pay](https://www.douyinpay.com/).
+- Developed ByteDance's hybrid framework for mobile platforms.
 
-He obtained a bachelor's degree in engineering from Beijing University of Posts and Telecommunications.
+Prior to that, from 2021 to 2022, he focused on runtime and build systems for mini programs at [Ant Group](https://www.antgroup.com/en).
+
+He obtained a bachelor's degree in engineering from Beijing University of Posts and Telecommunications (2017 - 2021). His time at university was a special chapter in his life, marked by both ambition and a touch of melancholy.
+
+---
+
+He is passionate about computer science, languages, investing, and crypto. In his spare time, he enjoys reading, photography, and traveling the world. 
+
+Regions and countries he has visited: 
+
+🇬🇧🇺🇸🇨🇦🇨🇱🇰🇷🇯🇵🇵🇼🇪🇬🇵🇸🇮🇱🇵🇪🇬🇺🇺🇿🇹🇷🇵🇭🇻🇳🇹🇭🇰🇭🇵🇦🇭🇰🇮🇩🇦🇿🇶🇦🇦🇪
 
 ---
 
 - [**Instagram**](https://www.instagram.com/kalung_tsang)
 - [**Douban**](https://www.douban.com/people/Kalung_Tsang)
+
